--- a/estudos em css/estudos em css/index.html
+++ b/estudos em css/estudos em css/index.html
@@ -260,5 +260,146 @@
 <!--LANDSCAPE-->
 <h3 id="landscape">Visível em Landscape</h3>
 
+<!-- FLEXBOX -->
+ <div class="flex">
+    <p>Meu</p>
+    <p>Primeiro</p>
+    <p>Elemento</p>
+    <p>Com</p>
+    <p>Flex</p>
+</div>
+
+<!-- COLUMN -->
+ <div class="flex-column">
+    <span>1</span>
+    <span>2</span>
+    <span>3</span>
+    <p style="color: black; font-size: medium;">4</p>
+ </div>
+
+ <!-- WRAP -->
+<div class="wrap">
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+</div>
+
+<!-- JUSTIFY CONTENT -->
+<h2>Center</h2>
+<div class="center">
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+</div>
+
+<h2>Space Around</h2>
+<div class="space-around">
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+</div>
+
+<h2>Space Between</h2>
+<div class="space-between">
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+</div>
+
+<h2>End</h2>
+<div class="end">
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+</div>
+
+<!-- ALIGN ITEMS -->
+ <h2>Center</h2>
+<div class="align-center">
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+</div>
+
+<h2>End</h2>
+<div class="flex-end">
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+</div>
+
+<h2>Stretch</h2>
+<div class="stretch">
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+</div>
+
+<!-- GAP -->
+ <h2>Gap</h2>
+ <div class="gap">
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+ </div>
+
+<!-- ORDER -->
+ <h2>Order</h2>
+ <div class="order">
+    <div class="box" id="three">3</div>
+    <div class="box" id="one">1</div>
+    <div class="box" id="two">2</div>
+ </div>
+
+ <!-- GROW -->
+  <h2>Grow</h2>
+  <div class="grow">
+    <div class="box"></div>
+    <div class="box big"></div>
+    <div class="box"></div>
+  </div>
+
+  <!-- BASIS -->
+  <h2>Basis</h2>
+  <div class="basis">
+    <div class="box"></div>
+    <div class="box big"></div>
+    <div class="box"></div>
+  </div>
+
+  <!-- SHRINK -->
+  <h2>Shrink</h2>
+  <div class="shrink">
+    <div class="box"></div>
+    <div class="box small"></div>
+    <div class="box"></div>
+  </div>
+
+  <!-- SHORTHAND -->
+    <h2>Shorthand</h2>
+  <div class="shorthand">
+    <div class="box"></div>
+    <div class="box different"></div>
+    <div class="box"></div>
+  </div>
+
+  <!-- ALIGN SELF -->
+  <h2>Auto Alinhamento</h2>
+  <div class="auto-alignment">
+    <div class="box"></div>
+    <div class="box different"></div>
+    <div class="box"></div>
+  </div>
+
+
 </body>
 </html>
